# LinuxGameHacking

./: README.md
Episode 1 - CMake Project, Injecting and Using a debugger/: CMakeLists.txt  README.md
Episode 1 - CMake Project, Injecting and Using a debugger/src/: Main.cpp
Episode 2 - Memory Protection, Dlsym & Trampoline Hook/: CMakeLists.txt  README.md
Episode 2 - Memory Protection, Dlsym & Trampoline Hook/src/: Main.cpp  Tramp.hpp
Episode 3 - Graphics with ImGui/: CMakeLists.txt
Episode 3 - Graphics with ImGui/src/: Main.cpp  Tramp.hpp
Episode 4 - Working with vtables/: VMT.cpp
